update fav bundle logic

--- a/features/historical_recommendations/feature1_favorites/updated_fav_bundles.ipynb
+++ b/features/historical_recommendations/feature1_favorites/updated_fav_bundles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,11 +334,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "process_csv('data/F1_test.csv', 'data/F1_test_res.csv', budget=200, min_bundle_size=2, max_rows=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from itertools import combinations\n",
+    "from typing import List, Dict, Tuple, Any\n",
+    "\n",
+    "\n",
+    "def normalize_columns(df: pd.DataFrame, freq_col: str = 'purchase_frequency', rec_col: str = 'recency') -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Normalize frequency and recency using min-max normalization:\n",
+    "    normalized_value = (value - min) / (max - min)\n",
+    "    Adds two new columns: 'normalized_f' and 'normalized_r'.\n",
+    "    \"\"\"\n",
+    "    for col, norm_col in [(freq_col, 'normalized_f'), (rec_col, 'normalized_r')]:\n",
+    "        min_val = df[col].min()\n",
+    "        max_val = df[col].max()\n",
+    "        if max_val > min_val:\n",
+    "            df[norm_col] = (df[col] - min_val) / (max_val - min_val)\n",
+    "        else:\n",
+    "            # If all values are the same, normalization would cause divide by zero. Set all to 1 or 0.\n",
+    "            df[norm_col] = 1.0\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def calculate_normalized_score(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Calculate the normalized_score for each product as (normalized_f + normalized_r).\n",
+    "    \"\"\"\n",
+    "    df['normalized_score'] = df['normalized_f'] + df['normalized_r']\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def calculate_business_score(subset: Tuple[Tuple[Any, ...], ...]) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate a business-specific score for a given subset of products.\n",
+    "    Customize this logic as per business requirements.\n",
+    "    \"\"\"\n",
+    "    # Example placeholder: assign a constant value\n",
+    "    return 2.0\n",
+    "\n",
+    "\n",
+    "def is_category_unique(subset: Tuple[Tuple[Any, ...], ...]) -> bool:\n",
+    "    \"\"\"Check if all categories in the subset are unique.\"\"\"\n",
+    "    categories = [p[1] for p in subset]\n",
+    "    return len(set(categories)) == len(categories)\n",
+    "\n",
+    "\n",
+    "def is_within_budget(subset: Tuple[Tuple[Any, ...], ...], budget: float) -> bool:\n",
+    "    \"\"\"Check if the sum of prices in the subset does not exceed the budget.\"\"\"\n",
+    "    total_price = sum(p[2] for p in subset)\n",
+    "    return total_price <= budget\n",
+    "\n",
+    "\n",
+    "def calculate_final_score(subset: Tuple[Tuple[Any, ...], ...]) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the final score for a given subset of products.\n",
+    "    final_score = sum of normalized_score + business_score\n",
+    "    \"\"\"\n",
+    "    base_score = sum(p[3] for p in subset)  # p[3] is normalized_score\n",
+    "    business = calculate_business_score(subset)\n",
+    "    return base_score + business\n",
+    "\n",
+    "\n",
+    "def generate_all_valid_bundles(\n",
+    "    products: List[Tuple[int, str, float, float]],\n",
+    "    budget: float,\n",
+    "    min_bundle_size: int = 2\n",
+    ") -> List[Dict]:\n",
+    "    \"\"\"\n",
+    "    Generate all valid bundles of products that:\n",
+    "    - Have at least min_bundle_size products\n",
+    "    - Have unique categories\n",
+    "    - Are within the budget\n",
+    "    \"\"\"\n",
+    "    valid_bundles = []\n",
+    "    n = len(products)\n",
+    "    for r in range(min_bundle_size, n + 1):\n",
+    "        for subset in combinations(products, r):\n",
+    "            if is_category_unique(subset) and is_within_budget(subset, budget):\n",
+    "                final_score = calculate_final_score(subset)\n",
+    "                bundle_price = sum(p[2] for p in subset)\n",
+    "                valid_bundles.append({\n",
+    "                    'bundle': subset,  # subset of products\n",
+    "                    'price': bundle_price,\n",
+    "                    'score': final_score\n",
+    "                })\n",
+    "    return valid_bundles\n",
+    "\n",
+    "\n",
+    "def is_extendable(\n",
+    "    bundle: Dict,\n",
+    "    products: List[Tuple[int, str, float, float]],\n",
+    "    budget: float\n",
+    ") -> bool:\n",
+    "    \"\"\"\n",
+    "    Check if a given bundle can be extended by adding another product without violating constraints.\n",
+    "    \"\"\"\n",
+    "    current_ids = {p[0] for p in bundle['bundle']}\n",
+    "    current_categories = {p[1] for p in bundle['bundle']}\n",
+    "    current_price = bundle['price']\n",
+    "    \n",
+    "    for p in products:\n",
+    "        if p[0] not in current_ids:\n",
+    "            if p[1] not in current_categories and (current_price + p[2] <= budget):\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def generate_maximal_bundles(\n",
+    "    products: List[Tuple[int, str, float, float]],\n",
+    "    budget: float,\n",
+    "    min_bundle_size: int = 2\n",
+    ") -> List[Dict]:\n",
+    "    \"\"\"\n",
+    "    Generate only maximal bundles:\n",
+    "    A maximal bundle is one that cannot be extended further without violating constraints.\n",
+    "    \"\"\"\n",
+    "    all_bundles = generate_all_valid_bundles(products, budget, min_bundle_size)\n",
+    "    maximal_bundles = []\n",
+    "    for b in all_bundles:\n",
+    "        if not is_extendable(b, products, budget):\n",
+    "            maximal_bundles.append(b)\n",
+    "    return maximal_bundles\n",
+    "\n",
+    "\n",
+    "def build_bundle_rows_for_consultant(\n",
+    "    group: pd.DataFrame,\n",
+    "    consultant_id: Any,\n",
+    "    maximal_bundles: List[Dict]\n",
+    ") -> List[Dict]:\n",
+    "    \"\"\"\n",
+    "    Convert maximal bundles into rows. Each row represents one bundle:\n",
+    "    - consultant_id\n",
+    "    - products: list of product_ids in the bundle\n",
+    "    - price: total price of the bundle\n",
+    "    - total_normalized_score: sum of normalized_score of products in the bundle\n",
+    "    - bundle_score: final score of the bundle\n",
+    "    \"\"\"\n",
+    "    results = []\n",
+    "    for mb in maximal_bundles:\n",
+    "        product_ids = [p[0] for p in mb['bundle']]\n",
+    "        # Extract product info from group\n",
+    "        subset_df = group[group['product_id'].isin(product_ids)]\n",
+    "        \n",
+    "        total_normalized_score = subset_df['normalized_score'].sum()\n",
+    "        # The mb['score'] is already final_score = total_normalized_score + business_score\n",
+    "        # Here total_normalized_score is extracted from the DataFrame, which should match the sum of p[3].\n",
+    "        \n",
+    "        result_row = {\n",
+    "            'consultant_id': consultant_id,\n",
+    "            'products': product_ids,\n",
+    "            'price': mb['price'],\n",
+    "            'total_normalized_score': total_normalized_score,\n",
+    "            'bundle_score': mb['score']\n",
+    "        }\n",
+    "        results.append(result_row)\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "def process_csv(\n",
+    "    input_csv: str,\n",
+    "    output_csv: str,\n",
+    "    budget: float,\n",
+    "    min_bundle_size: int = 2,\n",
+    "    max_rows: int = None\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Main function to:\n",
+    "    - Load data from input CSV\n",
+    "    - Normalize frequency and recency\n",
+    "    - Compute normalized_score\n",
+    "    - Generate maximal bundles per consultant\n",
+    "    - Output results to a CSV (one row per bundle)\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    input_csv : str\n",
+    "        Path to the input CSV file.\n",
+    "    output_csv : str\n",
+    "        Path where the output CSV file should be written.\n",
+    "    budget : float\n",
+    "        The purchasing power or maximum allowed total price for a bundle.\n",
+    "    min_bundle_size : int\n",
+    "        The minimum number of products required in a bundle.\n",
+    "    max_rows : int, optional\n",
+    "        If given, read only the specified number of rows from the input file.\n",
+    "    \"\"\"\n",
+    "    # Load input CSV\n",
+    "    df = pd.read_csv(input_csv)\n",
+    "    if max_rows is not None:\n",
+    "        df = df.head(max_rows)\n",
+    "    \n",
+    "    # Normalize frequency and recency\n",
+    "    df = normalize_columns(df, freq_col='purchase_frequency', rec_col='recency')\n",
+    "    \n",
+    "    # Compute normalized_score\n",
+    "    df = calculate_normalized_score(df)\n",
+    "    \n",
+    "    # Prepare final results list\n",
+    "    results = []\n",
+    "    \n",
+    "    # Process each consultant separately\n",
+    "    for consultant_id, group in df.groupby('consultant_id'):\n",
+    "        # Convert to tuples: (product_id, category, price, normalized_score)\n",
+    "        products = list(group[['product_id', 'category', 'price', 'normalized_score']].itertuples(index=False, name=None))\n",
+    "        \n",
+    "        # Generate maximal bundles for this consultant\n",
+    "        maximal = generate_maximal_bundles(products, budget, min_bundle_size)\n",
+    "        \n",
+    "        # Build result rows for each maximal bundle\n",
+    "        consultant_results = build_bundle_rows_for_consultant(group, consultant_id, maximal)\n",
+    "        results.extend(consultant_results)\n",
+    "    \n",
+    "    # Convert results to DataFrame\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    \n",
+    "    # Sort the results if desired\n",
+    "    # Sort by consultant_id and bundle_score descending if you want top bundles first\n",
+    "    results_df.sort_values(by=['consultant_id', 'bundle_score'], inplace=True, ascending=[True, False])\n",
+    "    \n",
+    "    # Write to CSV\n",
+    "    results_df.to_csv(output_csv, index=False)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example usage:\n",
+    "    # In practice, replace 'data/F1_test.csv' and 'data/F1_test_res.csv' with actual file paths\n",
+    "    process_csv('data/F1_test.csv', 'data/F1_test_res.csv', budget=200, min_bundle_size=2, max_rows=500)"
    ]
   }
  ],
